# libscd30

./: CMakeLists.txt
lib/: scd30.cmake
lib/scd30/: device.h  scd30.h
lib/source/: scd30.c
